# msi-keyboard-lights

./: CMakeLists.txt  README.md
doc/: 90-msi-keyboard.rules
src/: MSIKeyboard.cpp  MSIKeyboard.h  main.cpp
